--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "analytics.js-integration-intercom",
-  "description": "The Intercom analytics.js integration.",
+  "name": "analytics.js-integration-ramen",
+  "description": "The Ramen analytics.js integration.",
   "author": "Segment <friends@segment.com>",
   "license": "MIT",
   "main": "lib/index.js",
@@ -12,13 +12,13 @@
     "npm": ">=2.7.0"
   },
   "repository": {
-    "url": "https://github.com/segment-integrations/analytics.js-integration-intercom.git",
+    "url": "https://github.com/segment-integrations/analytics.js-integration-ramen.git",
     "type": "git"
   },
   "bugs": {
-    "url": "https://github.com/segment-integrations/analytics.js-integration-intercom/issues"
+    "url": "https://github.com/segment-integrations/analytics.js-integration-ramen/issues"
   },
-  "homepage": "https://segment.com/docs/integrations/intercom/",
+  "homepage": "https://segment.com/docs/integrations/ramen/",
   "dependencies": {},
   "devDependencies": {
     "duo": "0.12.x",
